# merlin-spellbook

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTORS  COPYRIGHT  LICENSE  Makefile  README.md  conduit_bundler.py  setup.cfg  setup.py  translator.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-python/: action.yaml
.github/workflows/: push-pr_workflow.yml
conduit_gather/cmake/: CMakeBasics.cmake
conduit_gather/src/: CMakeLists.txt  conduit_gather.cpp
data_formatting/conduit/: CMakeCache.txt
data_formatting/conduit/src/conduit_gather/cmake/: SetupBLT.cmake
data_formatting/conduit/src/python/: collector.py
jag_learn/: CMakeLists.txt  collector.cxx  jag_learn.yaml  make_samples.py  translator.py
jag_learn/cmake/: SetupCompilerFlags.cmake  SetupLibraries.cmake
jag_learn_old/: CMakeCache.txt  README.md  make_samples.py  translator.py
jag_learn_old/cmake/libraries/: FindConduit.cmake  FindHDF5.cmake
ml/: learn.py  surrogates.py
requirements/: dev.txt  release.txt
shared/: learn.py  predict.py  surrogates.py
shared/shared_conduit/: conduit_bundler.py  conduit_reader.cpp
shared/shared_jag/: jag_exe.py  jag_params.py  utils.py
spellbook/: __init__.py  __main__.py  click_main.py  log_formatter.py  main.py  utils.py
spellbook/commands/: __init__.py  collect.py  conduit-collect.py  conduit-mpi-collect.py  conduit-translate.py  group-files.py  learn.py  make-barrier-cost.py  make-samples.py  make_samples.py  predict.py  serialize.py  stack-npz.py  translate.py
spellbook/data_formatting/: collector.py  group_files.py  serialize.py  stack_npz.py  translator.py
spellbook/data_formatting/conduit/conduit_gather/: CMakeLists.txt
spellbook/data_formatting/conduit/python/: collector.py  conduit_bundler.py  mpi_collector.py  translator.py
spellbook/ml/: learn.py  learn_alt.py  predict.py  surrogates.py
spellbook/optimization/: qoi.py
spellbook/sampling/: make_samples.py
tests/: __init__.py  command_line_tests.py
tests/data_formatting/conduit/: test_conduit.py
tests/ml/: test_learn.py
tests/sampling/: test_make_samples.py
tests/utils/: test_stack_arrays.py
